syntax = "proto3";

option csharp_namespace = "ExpertSystem.Common.Generated";

import "SocketMessages.proto";

package ExpertSystem.SocketExchange;

service SocketExchange {
    rpc SayHello (HelloMessage) returns (HelloMessage) {}
    
    rpc GetSockets (Empty) returns (stream CustomSocket) {}
    rpc UpsertSocket (CustomSocket) returns (CustomSocket) {}
    rpc DeleteSocket (CustomSocketIdentity) returns (Empty) {}

    rpc GetSocketGroups (Empty) returns (stream SocketGroup) {}
    rpc AddSocketGroup (SocketGroupIdentity) returns (SocketGroup) {}
    rpc AddToSocketGroup (CustomSocketIdentityJoinGroup) returns (SocketGroup) {}
    rpc RemoveSocketFromGroup (CustomSocketIdentityJoinGroup) returns (SocketGroup) {}
    rpc DeleteSocketGroup (SocketGroupIdentity) returns (Empty) {}
}
